[package]
name = "bevy_indices"
version = "0.1.0"
edition = "2021"
authors = ["James Bell <jamescarterbell@gmail.com>"]
license = "MIT"
license-file = "LICENSE-MIT"
repository = "https://github.com/OxidizedGames/bevy_tiles"
homepage = "https://github.com/OxidizedGames/bevy_tiles"

[workspace.profile.dev]
opt-level = 1

[workspace.profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.14.0", default-features = false}
rstest = "0.18.2"
bimap = "0.6.3"
rand = "0.8.5"
crossbeam = "0.8.3"
dashmap = "5.5.3"

[workspace.lints.clippy]
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
all = "deny"

[workspace.lints.rust]
unused_imports = "warn"


[dev-dependencies]
bevy = {version = "0.14.0", default-features = true}